# OperationSystemExperiment

./: README.md
MemoryManage/FIFO/: CMakeLists.txt  main.cpp
MemoryManage/LRU/: CMakeLists.txt  main.cpp
allinOne/: CMakeLists.txt  Dev_Bank.cpp  Dev_Bank.h  DeviceManage.cpp  DeviceManage.h  FileManage.cpp  FileManage.h  Mem_FIFO.cpp  Mem_FIFO.h  Mem_LRU.cpp  Mem_LRU.h  MemoryManage.cpp  MemoryManage.h  Proc_FCFS.cpp  Proc_FCFS.h  Proc_PC.cpp  Proc_PC.h  Proc_Priority.cpp  Proc_Priority.h  Proc_ROUND.cpp  Proc_ROUND.h  ProcessManage.cpp  ProcessMange.h  main.cpp
deviceManage/: CMakeLists.txt  main.cpp
fileManage/: CMakeLists.txt  main.cpp
procedureManage/FCFS/: CMakeLists.txt  main.cpp
procedureManage/PCProblem/: CMakeLists.txt  main.cpp
procedureManage/Priority/: CMakeLists.txt  main.cpp
procedureManage/Round/: CMakeLists.txt  main.cpp
